@@ -142,6 +142,8 @@ char *hpd_up =
         "                          <order> can be 'asc' (ascending) or 'desc' (descending)\n"
         "                          Sorts by the specified data log <field>\n"
         "                          Used with -e, -d, -i, -l, -o, -w, -a, -k, -h, -n, -q\n"
+        "  --sortmethod <heap|swap>\n"
+        "                        Select a sorting method (default: heap)\n"
         "\n"
         "Options:\n"
         "  -f                    Force operation where it applies (use -ff for greater effect)\n"
